cudaq/test/Transforms/invalid.qke
// ========================================================================== //
// Copyright (c) 2022 - 2026 NVIDIA Corporation & Affiliates.                 //
// All rights reserved.                                                       //
//                                                                            //
// This source code and the accompanying materials are made available under   //
// the terms of the Apache License 2.0 which accompanies this distribution.   //
// ========================================================================== //

// RUN: cudaq-opt %s -split-input-file -verify-diagnostics

func.func @test_struq() {
  %0 = quake.alloca !quake.veq<4>
  %1 = arith.constant 1 : i32
  %2 = arith.constant 2.0 : f32
  // expected-error@+2 {{invalid struq member type}}
  // expected-error@+1 {{must be variadic of non-struct quantum reference type}}
  %6 = quake.make_struq %0, %1, %2 : (!quake.veq<4>, i32, f32) -> !quake.struq<!quake.veq<?>, i32, f32>
  return
}

// -----

func.func @test_struq() {
  %0 = quake.alloca !quake.veq<4>
  %1 = quake.alloca !quake.veq<7>
  // expected-error@+1 {{member type not compatible with operand type}}
  %6 = quake.make_struq %0, %1 : (!quake.veq<4>, !quake.veq<7>) -> !quake.struq<!quake.veq<3>, !quake.veq<8>>
  return
}

// -----

func.func @test_struq() {
  %0 = quake.alloca !quake.veq<4>
  %1 = quake.alloca !quake.veq<7>
  // expected-error@+1 {{result type has different member count than operands}}
  %6 = quake.make_struq %0, %1 : (!quake.veq<4>, !quake.veq<7>) -> !quake.struq<!quake.veq<?>>
  return
}

// -----

func.func @test_struq() {
  %0 = quake.alloca !quake.veq<4>
  %1 = quake.alloca !quake.veq<7>
  // expected-error@+1 {{result type has different member count than operands}}
  %6 = quake.make_struq %0, %1 : (!quake.veq<4>, !quake.veq<7>) -> !quake.struq<!quake.veq<?>, !quake.veq<?>, !quake.veq<?>>
  return
}

// -----

func.func @test_struq(%arg : !quake.struq<!quake.veq<1>, !quake.veq<2>, !quake.veq<3>>) {
  // expected-error@+1 {{invalid index}}
  %6 = quake.get_member %arg[3] : (!quake.struq<!quake.veq<1>, !quake.veq<2>, !quake.veq<3>>) -> !quake.veq<1>
  return
}

// -----

func.func @test_struq() {
  // expected-error@+1 {{struq type must have specified size}}
  %0 = quake.alloca !quake.struq<!quake.veq<1>, !quake.veq<?>>
  return
}

// -----

func.func @test_struq() {
  // expected-error@+1 {{invalid struq member type}}
  %0 = quake.alloca !quake.struq<!quake.struq<!quake.veq<3>, !quake.ref>, !quake.veq<7>>
  return
}

// -----

func.func @test_subveq(%0: !quake.veq<2>) {
  // expected-error@+1 {{does not fully intersect}}
  %1 = quake.subveq %0, 10, 10 : (!quake.veq<2>) -> !quake.veq<1>
  return
}

// -----

func.func @test_subveq(%0: !quake.veq<?>) {
  // expected-error@+1 {{invalid subrange specified}}
  %1 = quake.subveq %0, 10, 4 : (!quake.veq<?>) -> !quake.veq<?>
  return
}

// -----

func.func @test_subveq(%0: !quake.veq<?>) {
  // expected-error@+1 {{incorrect size for result}}
  %1 = quake.subveq %0, 8, 35 : (!quake.veq<?>) -> !quake.veq<1>
  return
}

// -----

func.func @test_insert_value(%0: !cc.struct<{i32, i8}>) {
  %2 = arith.constant 4 : i32
  // expected-error@+1 {{result type does not match input}}
  %1 = cc.insert_value %0[0], %2 : (!cc.struct<{i32, i8}>, i32) -> !cc.struct<{i32, i16}>
  return
}

// -----

func.func @test_insert_value(%0: !cc.array<i32 x ?>) {
  %2 = arith.constant 4 : i32
  // expected-error@+1 {{array must have constant size}}
  %1 = cc.insert_value %0[0], %2 : (!cc.array<i32 x ?>, i32) -> !cc.array<i32 x ?>
  return
}

// -----

func.func @test_insert_value(%0: !cc.array<i32 x 8>) {
  %2 = arith.constant 4 : i32
  // expected-error@+1 {{array cannot index out of bounds elements}}
  %1 = cc.insert_value %0[12], %2 : (!cc.array<i32 x 8>, i32) -> !cc.array<i32 x 8>
  return
}

// -----

func.func @test_insert_value(%0: !cc.struct<{i8, i16, i32, i64}>) {
  %2 = arith.constant 4 : i32
  // expected-error@+1 {{struct cannot index out of bounds members}}
  %1 = cc.insert_value %0[12], %2 : (!cc.struct<{i8, i16, i32, i64}>, i32) -> !cc.struct<{i8, i16, i32, i64}>
  return
}

// -----

func.func @test_insert_value(%0: complex<f64>) {
  %2 = arith.constant 4.0 : f64
  // expected-error@+1 {{complex index is out of bounds}}
  %1 = cc.insert_value %0[2], %2 : (complex<f64>, f64) -> complex<f64>
  return
}

// -----

func.func @test_insert_value(%0: !cc.array<!cc.struct<{i8, complex<f64>}> x 6>) {
  %2 = arith.constant 4.0 : f64
  // expected-error@+1 {{too many indices}}
  %1 = cc.insert_value %0[2, 1, 0, 0], %2 : (!cc.array<!cc.struct<{i8, complex<f64>}> x 6>, f64) -> !cc.array<!cc.struct<{i8, complex<f64>}> x 6>
  return
}

// -----

func.func @test_insert_value(%0: !cc.array<!cc.struct<{i8, complex<f64>}> x 6>) {
  %2 = arith.constant 4 : i64
  // expected-error@+1 {{value type does not match}}
  %1 = cc.insert_value %0[2, 1, 0], %2 : (!cc.array<!cc.struct<{i8, complex<f64>}> x 6>, i64) -> !cc.array<!cc.struct<{i8, complex<f64>}> x 6>
  return
}

// -----

func.func @test_cast_truncation_1(%0: i64) -> i32 {
  // expected-error@+1 {{to integer extension, not truncation}}
  %1 = cc.cast unsigned %0 : (i64) -> i32
  return %1 : i32
}

// -----

func.func @test_cast_truncation_2(%0: i64) -> i32 {
  // expected-error@+1 {{to integer extension, not truncation}}
  %1 = cc.cast signed %0 : (i64) -> i32
  return %1 : i32
}

// -----

// expected-error@+1 {{callee must be declared}}
quake.apply @error : () -> ()

// -----

%1 = arith.constant 0 : i32
%2 = arith.constant 1 : i32
// expected-error@+1 {{expected ':'}}
quake.apply %1, %2 : (i32, i32) -> ()

// -----

func.func private @wonk(i32, i32)

%1 = arith.constant 4 : i32
// expected-error@+1 {{number of arguments must be consistent}}
quake.apply @wonk %1 : (i32) -> ()

// -----

func.func private @wonk(i32, i32)

%1 = arith.constant 4 : i32
%2 = quake.alloca !quake.veq<18>
// expected-error@+1 {{number of arguments must be consistent}}
quake.apply @wonk [%2] %1 : (!quake.veq<18>, i32) -> ()

// -----

func.func private @wonk(!quake.veq<2>, i32)

%1 = arith.constant 4 : i32
%2 = quake.alloca !quake.veq<18>
// expected-error@+1 {{argument types must match}}
quake.apply @wonk %2, %1 : (!quake.veq<18>, i32) -> ()

// -----

func.func private @wonk(!quake.veq<18>, i32) -> f64

%1 = arith.constant 4 : i32
%2 = quake.alloca !quake.veq<18>
// expected-error@+1 {{result types must match}}
%3 = quake.apply @wonk %2, %1 : (!quake.veq<18>, i32) -> i8

// -----

// expected-error@+1 {{cannot classically allocate quake abstract type}}
%0 = cc.alloca !quake.measure

// -----

func.func @mz_handle_register_scalar_result(%v: !quake.veq<?>) {
  // expected-error@+1 {{must return `!cc.stdvec<!quake.measure>` or `!cc.stdvec<!cc.measure_handle>`}}
  %m = quake.mz %v : (!quake.veq<?>) -> !cc.measure_handle
  return
}

// -----

module {
  func.func @test_custom_unitary_non_square() {
    %0 = quake.alloca !quake.ref
    // expected-error@+1 {{Invalid matrix size, required 2^N * 2^N for N-qubit operation}}
    quake.custom_unitary_constant @nonsquare_3_mat %0 : (!quake.ref) -> ()
    return
  }
  cc.global constant private @nonsquare_3_mat (dense<[(0.0,0.0), (1.0,0.0), (1.0,0.0)]> : tensor<3xcomplex<f64>>) : !cc.array<complex<f64> x 3>
}

// -----

module {
  func.func @test_custom_unitary_target_mismatch_too_small() {
    %0 = quake.alloca !quake.veq<2>
    %1 = quake.extract_ref %0[0] : (!quake.veq<2>) -> !quake.ref
    %2 = quake.extract_ref %0[1] : (!quake.veq<2>) -> !quake.ref
    // expected-error@+1 {{Invalid matrix size, required 2^N * 2^N for N-qubit operation}}
    quake.custom_unitary_constant @one_q_mat %1, %2 : (!quake.ref, !quake.ref) -> ()
    return
  }
  cc.global constant private @one_q_mat (dense<[(0.0,0.0), (1.0,0.0), (1.0,0.0), (0.0,0.0)]> : tensor<4xcomplex<f64>>) : !cc.array<complex<f64> x 4>
}

// -----

module {
  func.func @test_custom_unitary_target_mismatch_too_large() {
    %0 = quake.alloca !quake.ref
    // expected-error@+1 {{Invalid matrix size, required 2^N * 2^N for N-qubit operation}}
    quake.custom_unitary_constant @two_q_mat %0 : (!quake.ref) -> ()
    return
  }
  cc.global constant private @two_q_mat (dense<[(1.0,0.0), (0.0,0.0), (0.0,0.0), (0.0,0.0), (0.0,0.0), (1.0,0.0), (0.0,0.0), (0.0,0.0), (0.0,0.0), (0.0,0.0), (1.0,0.0), (0.0,0.0), (0.0,0.0), (0.0,0.0), (0.0,0.0), (1.0,0.0)]> : tensor<16xcomplex<f64>>) : !cc.array<complex<f64> x 16>
}

// -----

module {
  func.func @test_custom_unitary_extern_matrix() {
    %0 = quake.alloca !quake.ref
    // expected-error@+1 {{Invalid matrix symbol, must have a constant value}}
    quake.custom_unitary_constant @extern_mat %0 : (!quake.ref) -> ()
    return
  }
  cc.global extern private @extern_mat : !cc.array<complex<f64> x 4>
}

// -----

module {
  func.func @test_custom_unitary_non_elements_matrix() {
    %0 = quake.alloca !quake.ref
    // expected-error@+1 {{Invalid matrix symbol, must be an elements attribute}}
    quake.custom_unitary_constant @str_mat %0 : (!quake.ref) -> ()
    return
  }
  cc.global constant private @str_mat ("hello") : !cc.array<i8 x 5>
}

// -----

module {
  func.func @test_custom_unitary_integer_elements() {
    %0 = quake.alloca !quake.ref
    // expected-error@+1 {{Invalid matrix element type, required `complex<f64>`}}
    quake.custom_unitary_constant @int_mat %0 : (!quake.ref) -> ()
    return
  }
  cc.global constant private @int_mat (dense<[0, 1, 1, 0]> : tensor<4xi64>) : !cc.array<i64 x 4>
}

// -----

func.func @invalid_exp_pauli_literal(%theta : f64) {
  %qubits = quake.alloca !quake.veq<2>
  // expected-error@+1 {{literal Pauli word must contain only I, X, Y, or Z}}
  quake.exp_pauli (%theta) %qubits to "XA" : (f64, !quake.veq<2>) -> ()
  return
}

// -----

func.func @invalid_control_polarity_count() {
  %control = quake.alloca !quake.ref
  %target = quake.alloca !quake.ref
  // expected-error@+1 {{control polarity count must match control operand count}}
  quake.x [%control neg [true, false]] %target : (!quake.ref, !quake.ref) -> ()
  return
}

// -----

func.func @invalid_exp_pauli_literal_length(%theta : f64) {
  %qubits = quake.alloca !quake.veq<2>
  // expected-error@+1 {{literal Pauli word length must match target qubit count}}
  quake.exp_pauli (%theta) %qubits to "X" : (f64, !quake.veq<2>) -> ()
  return
}
